--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="end_time">End Time</string>
     <string name="notes">Notes</string>
     <string name="add_routine">Add routine</string>
+    <string name="single_leg_single_arm">Single Leg/Single Arm</string>
 </resources>
