Firestore synch + UI updates

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="add_routine">Add routine</string>
     <string name="single_leg_single_arm">Single Leg/Single Arm</string>
     <string name="web_client_id">672863711286-lebcp3jb39vs1kjfa8q0dsgffhli12a2.apps.googleusercontent.com</string>
+    <string name="category_statistics">Category Statistics</string>
+    <string name="exercises">Exercises</string>
 </resources>
